--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Examen 01</title>
   </head>
   <body>
     <header>
-      <div>
-        <input type="tel" />
-      </div>
-      <div>
-        <h2>Calculadora virtual</h2>
+      <div id="contenedorHeader">
+        <div class="telefonoDiv">
+          <h3 class="tituloBlanco">📞 +506 8888 7777</h3>
+        </div>
+        <div class="telefonoDiv">
+          <h2 class="tituloBlanco">Calculadora virtual</h2>
+        </div>
       </div>
     </header>
     <main>
@@ -19,9 +22,6 @@
         <h3 id="varNumero">0</h3>
       </div>
       <div id="tableroNumeros">
-
-
-
         <div class="rowTablero">
           <div class="numberDiv">
             <h3>C</h3>
@@ -36,8 +36,6 @@
             <h3>/</h3>
           </div>
         </div>
-
-
 
         <div class="rowTablero">
           <div class="numberDiv">
@@ -54,8 +52,6 @@
           </div>
         </div>
 
-
-
         <div class="rowTablero">
           <div class="numberDiv">
             <h3>4</h3>
@@ -71,8 +67,6 @@
           </div>
         </div>
 
-
-      
         <div class="rowTablero">
           <div class="numberDiv">
             <h3>1</h3>
@@ -87,8 +81,6 @@
             <h3>+</h3>
           </div>
         </div>
-
-
 
         <div class="rowTablero">
           <div class="numberDiv">
