--- a/index.html
+++ b/index.html
@@ -18,82 +18,88 @@
       </div>
     </header>
     <main>
-      <div id="pantalla">
-        <h3 id="varNumero">0</h3>
-      </div>
-      <div id="tableroNumeros">
-        <div class="rowTablero">
-          <div class="numberDiv">
-            <h3>C</h3>
+      <div id="billetes">
+        <div id="fondoGris">
+          <div id="pantalla">
+            <h3 id="varNumero">0</h3>
           </div>
-          <div class="numberDiv">
-            <h3>Borrar</h3>
-          </div>
-          <div class="numberDiv">
-            <h3>%</h3>
-          </div>
-          <div class="numberDiv">
-            <h3>/</h3>
-          </div>
-        </div>
+          <div id="contenedorNumeros">
+            <div id="tableroNumeros">
+              <div class="rowTablero">
+                <div class="numberDiv">
+                  <h3 class="numerin">C</h3>
+                </div>
+                <div class="numberDiv">
+                  <h3 class="numerin">◀</h3>
+                </div>
+                <div class="numberDiv">
+                  <h3 class="numerin">%</h3>
+                </div>
+                <div class="numberDiv">
+                  <h3 class="numerin">/</h3>
+                </div>
+              </div>
 
-        <div class="rowTablero">
-          <div class="numberDiv">
-            <h3>7</h3>
-          </div>
-          <div class="numberDiv">
-            <h3>8</h3>
-          </div>
-          <div class="numberDiv">
-            <h3>9</h3>
-          </div>
-          <div class="numberDiv">
-            <h3>x</h3>
-          </div>
-        </div>
+              <div class="rowTablero">
+                <div class="numberDiv">
+                  <h3 class="numerin">7</h3>
+                </div>
+                <div class="numberDiv">
+                  <h3 class="numerin">8</h3>
+                </div>
+                <div class="numberDiv">
+                  <h3 class="numerin">9</h3>
+                </div>
+                <div class="numberDiv">
+                  <h3  class="numerin">x</h3>
+                </div>
+              </div>
 
-        <div class="rowTablero">
-          <div class="numberDiv">
-            <h3>4</h3>
-          </div>
-          <div class="numberDiv">
-            <h3>5</h3>
-          </div>
-          <div class="numberDiv">
-            <h3>6</h3>
-          </div>
-          <div class="numberDiv">
-            <h3>-</h3>
-          </div>
-        </div>
+              <div class="rowTablero">
+                <div class="numberDiv">
+                  <h3 class="numerin">4</h3>
+                </div>
+                <div class="numberDiv">
+                  <h3 class="numerin">5</h3>
+                </div>
+                <div class="numberDiv">
+                  <h3 class="numerin">6</h3>
+                </div>
+                <div class="numberDiv">
+                  <h3 class="numerin">-</h3>
+                </div>
+              </div>
 
-        <div class="rowTablero">
-          <div class="numberDiv">
-            <h3>1</h3>
-          </div>
-          <div class="numberDiv">
-            <h3>2</h3>
-          </div>
-          <div class="numberDiv">
-            <h3>3</h3>
-          </div>
-          <div class="numberDiv">
-            <h3>+</h3>
-          </div>
-        </div>
+              <div class="rowTablero">
+                <div class="numberDiv">
+                  <h3 class="numerin">1</h3>
+                </div>
+                <div class="numberDiv">
+                  <h3 class="numerin">2</h3>
+                </div>
+                <div class="numberDiv">
+                  <h3 class="numerin">3</h3>
+                </div>
+                <div class="numberDiv">
+                  <h3 class="numerin">+</h3>
+                </div>
+              </div>
 
-        <div class="rowTablero">
-          <div class="numberDiv">
-            <h3>+/-</h3>
-          </div>
-          <div class="numberDiv">
-            <h3>0</h3>
-          </div>
-          <div class="numberDiv">
-            <h3>,</h3>
-          </div>
-          <div class="numberDiv">
-            <h3>=</h3>
+              <div class="rowTablero">
+                <div class="numberDiv">
+                  <h3 class="numerin">+/-</h3>
+                </div>
+                <div class="numberDiv">
+                  <h3 class="numerin">0</h3>
+                </div>
+                <div class="numberDiv">
+                  <h3 class="numerin">,</h3>
+                </div>
+                <div class="numberDiv">
+                  <h3 class="numerin">=</h3>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
