--- a/index.html
+++ b/index.html
@@ -3,106 +3,106 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Calculadora</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
-    <title>Examen 01</title>
   </head>
+
   <body>
     <header>
-      <div id="contenedorHeader">
-        <div class="telefonoDiv">
-          <h3 class="tituloBlanco">📞 +506 8888 7777</h3>
+      <nav class="navbar header__nav" style="background-color: #000000">
+        <div class="container-fluid">
+          <div class="d-flex align-items-center">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="17"
+              height="17"
+              fill="white"
+              class="bi bi-telephone-fill me-2"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"
+              />
+            </svg>
+            <span class="navbar-brand mb-0 h1 firstSpan__text"
+              >+506 8888 7777</span
+            >
+          </div>
         </div>
-        <div class="telefonoDiv">
-          <h2 class="tituloBlanco">Calculadora virtual</h2>
+      </nav>
+
+      <nav class="navbar secondHeader__nav" style="background-color: #202020">
+        <div class="container-fluid">
+          <span class="navbar-brand mb-0 h1 secondSpan__text"
+            >Calculadora virtual</span
+          >
         </div>
-      </div>
+      </nav>
     </header>
+
     <main>
-      <div id="billetes">
-        <div id="fondoGris">
-          <div id="pantalla">
-            <h3 id="varNumero">0</h3>
-          </div>
-          <div id="contenedorNumeros">
-            <div id="tableroNumeros">
-              <div class="rowTablero">
-                <div class="numberDiv">
-                  <h3 class="numerin">C</h3>
-                </div>
-                <div class="numberDiv">
-                  <h3 class="numerin">◀</h3>
-                </div>
-                <div class="numberDiv">
-                  <h3 class="numerin">%</h3>
-                </div>
-                <div class="numberDiv">
-                  <h3 class="numerin">/</h3>
-                </div>
-              </div>
+      <div id="cuerpoCalculadora">
+        <div id="pantallaCalculadora">
+          <h3 id="numero">0</h3>
+        </div>
+        <div id="contenedorTeclas">
+          <button class="botonCalculadora botonCalculadora--naranja">C</button>
+          <button class="botonCalculadora botonCalculadora--naranja">⌫</button>
+          <button class="botonCalculadora botonCalculadora--naranja">%</button>
+          <button class="botonCalculadora botonCalculadora--naranja">/</button>
 
-              <div class="rowTablero">
-                <div class="numberDiv">
-                  <h3 class="numerin">7</h3>
-                </div>
-                <div class="numberDiv">
-                  <h3 class="numerin">8</h3>
-                </div>
-                <div class="numberDiv">
-                  <h3 class="numerin">9</h3>
-                </div>
-                <div class="numberDiv">
-                  <h3  class="numerin">x</h3>
-                </div>
-              </div>
+          <button class="botonCalculadora">7</button>
+          <button class="botonCalculadora">8</button>
+          <button class="botonCalculadora">9</button>
+          <button class="botonCalculadora botonCalculadora--naranja">X</button>
 
-              <div class="rowTablero">
-                <div class="numberDiv">
-                  <h3 class="numerin">4</h3>
-                </div>
-                <div class="numberDiv">
-                  <h3 class="numerin">5</h3>
-                </div>
-                <div class="numberDiv">
-                  <h3 class="numerin">6</h3>
-                </div>
-                <div class="numberDiv">
-                  <h3 class="numerin">-</h3>
-                </div>
-              </div>
+          <button class="botonCalculadora">4</button>
+          <button class="botonCalculadora">5</button>
+          <button class="botonCalculadora">6</button>
+          <button class="botonCalculadora botonCalculadora--naranja">-</button>
 
-              <div class="rowTablero">
-                <div class="numberDiv">
-                  <h3 class="numerin">1</h3>
-                </div>
-                <div class="numberDiv">
-                  <h3 class="numerin">2</h3>
-                </div>
-                <div class="numberDiv">
-                  <h3 class="numerin">3</h3>
-                </div>
-                <div class="numberDiv">
-                  <h3 class="numerin">+</h3>
-                </div>
-              </div>
+          <button class="botonCalculadora">1</button>
+          <button class="botonCalculadora">2</button>
+          <button class="botonCalculadora">3</button>
+          <button class="botonCalculadora botonCalculadora--naranja">+</button>
 
-              <div class="rowTablero">
-                <div class="numberDiv">
-                  <h3 class="numerin">+/-</h3>
-                </div>
-                <div class="numberDiv">
-                  <h3 class="numerin">0</h3>
-                </div>
-                <div class="numberDiv">
-                  <h3 class="numerin">,</h3>
-                </div>
-                <div class="numberDiv">
-                  <h3 class="numerin">=</h3>
-                </div>
-              </div>
-            </div>
-          </div>
+          <button class="botonCalculadora botonCalculadora--naranja">+/-</button>
+          <button class="botonCalculadora">0</button>
+          <button class="botonCalculadora botonCalculadora--naranja">.</button>
+          <button class="botonCalculadora botonCalculadora--naranja">=</button>
         </div>
       </div>
     </main>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    ></script>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const display = document.getElementById("numero");
+        const botones = document.querySelectorAll(".botonCalculadora");
+
+        botones.forEach((boton) => {
+          const valor = boton.textContent;
+
+          // Si el contenido del botón es un número
+          if (!isNaN(valor)) {
+            boton.addEventListener("click", () => {
+              display.textContent = valor;
+            });
+          }
+        });
+      });
+    </script>
   </body>
 </html>
